--- a/layouts/partials/head/custom.html
+++ b/layouts/partials/head/custom.html
@@ -1,6 +1,7 @@
 <style>
     /* Overwrite CSS variable */
     :root {
+        --base-font-family: "Ubuntu", var(--sys-font-family), var(--zh-font-family);
         --article-font-family: "Ubuntu", var(--base-font-family);
     }
 </style>
